0.80 ---- Europe/Moscow
    [IMPROVEMENTS]
    * Refactoring
    * Moved Plugin login to Validator class
    * More tests

    [DOCS]
    * Validators docs

0.71 2022-04-22 19:40:42 Europe/Moscow
    [IMPROVEMENTS]
    * Unsetting $valid_input after first access

    [DOCS]
    * Document validators
    * Profile method
    * Screenshot
    * Fix typos

0.70 2022-04-22 18:01:46 Europe/Moscow
    [CHANGES]
    * Validate signature. Now accepting arguments as hash

    [FEATURES]
    * New dsl keyword: validated

    [REMOVED]
    * validator_language

    [DOCS]
    * Update docs

0.61 2022-04-12 14:38:13 Europe/Moscow
    [IMPROVEMENTS]
    * Refactored field defined and not empty

0.60 2022-04-12 12:59:01 Europe/Moscow
    [CHANGES]
    * Removed validate_form dsl
    * Removed config form => profile association
    * Add validate dsl

    [DOCS]
    * Update docs

0.51 2022-04-11 19:41:41 Europe/Moscow
    [CHANGES]
    * Now validated defined and not empty fields

    [DOCS]
    * Extensions
    * Some validators

0.50 2022-04-06 15:30:45 Europe/Moscow
    [CHANGES]
    * Change ProfileHasMessages message struct

    [DOCS]
    * Profile custom messages

0.40 2022-04-06 12:29:59 Europe/Moscow
    [CHANGES]
    * Passing extension to its validator constructor

0.31 2022-04-06 11:15:15 Europe/Moscow
    [IMPROVEMENTS]
    * Refactored deferred plugin usage

0.30 2022-04-05 19:02:51 Europe/Moscow
    [CHANGES]
    * Perl minimum version set to 5.34.0
    * List::Util minimum version to 1.45
    * Remove dsl validate

    [FEATURES]
    * Add predicates for Extension and Validator roles properties

    [IMPROVEMENTS]
    * Lazy builder for Registry::validators

    [DOCS]
    * More info about plugin

0.22 2022-04-04 23:33:32 Europe/Moscow
    [FEATURES]
    * AlphaAscii validator
    * AlphaNumAscii validator

    [DOCS]
    * some validators description

0.21 2022-04-04 22:40:21 Europe/Moscow
    [BUGS]
    * Required validator accepting empty string
